archived-wordpress/3-app-configuration/sample-deployment/deployment.yml
##############
# PROD SAMPLE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-flask
  namespace: prod
  labels:
    app: sample-flask
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-flask
      env: prod
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-flask
        env: prod
        tier: frontend
    spec:
      containers:
      - name: sample-flask
        image: docker.io/88lexd/sample-flask:latest
        resources:
          requests:
            cpu: 0.5
            memory: 512M
          limits:
            memory: 512M
