archived-wordpress/3-app-configuration/sample-deployment/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    # This host name is configured via Cloudflare...
    - host: tftesting.lexdsolutions.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-service
              port:
                number: 8000
